# workanimebot

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
bot/: __init__.py  __main__.py  config.py  main.py  strings.py
bot/api/: __init__.py  allanime.py  anime_api.py  decoder.py  downloader.py  providers.py
bot/handlers/: errors.py  menu.py  search.py  start.py
bot/utils/: keyboard.py  state.py
